# class-it-up

./: .gitattributes  .gitignore  Dockerfile  README.md  bb.rest  bert_model_quantized.onnx  dataset.json  dataset.ndjson  main.py  pyproject.toml  server.py  test.ipynb  torchscript_convert.py
.github/workflows/: build-docker-image.yml
src/: onnx_convert.py  save_tokenizer.py  test.py  torchscript_convert.py
