[project]
name = "class-it-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "pydantic>=2.10.6",
    "transformers>=4.50.1",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "adbc-driver-sqlite>=1.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "notebook>=7.3.3",
    "pandas>=2.2.3",             # For VSCode Data Wrangler Extension
    "polars[pyarrow]>=1.26.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]
